--- a/comparison_framework/requirements.txt
+++ b/comparison_framework/requirements.txt
@@ -9,3 +9,4 @@ requests>=2.31.0
 python-dotenv>=1.0.0
 zipfile36>=0.1.3
 pyarrow>=12.0.1  # for parquet support
+ydata-profiling>=4.5.1  # for HTML profiling reports
